--- a/index.html
+++ b/index.html
@@ -4,5 +4,19 @@
 <meta charset="utf-8" />
 </head>
 <body>
+
+<div class="row">
+  <div class="col-lg-4"></div>
+  <div class="col-lg-6"></div>
+</div>
+<div class="row">
+  <div class="col-lg-2"></div>
+  <div class="col-lg-12"></div>
+  <div class="col-lg-2"></div>
+</div>
+<div class="row">
+  ...
+</div>
+
 </body>
 </html>
