--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
 <body>
 
 <div class="row">
-  <div class="col-lg-4"></div>
-  <div class="col-lg-6"></div>
+  <div class="col-lg-4">asd</div>
+  <div class="col-lg-6">dsa</div>
 </div>
 <div class="row">
   <div class="col-lg-2"></div>
-  <div class="col-lg-12"></div>
+  <div class="col-lg-12">asdasd</div>
   <div class="col-lg-2"></div>
 </div>
 <div class="row">
