--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <head>
-<link rel="stylesheet" href="./style/css/bootstrap.min.css" />
+<link rel="stylesheet" href="./style/bootstrap-5.0.0-beta1-dist/css/bootstrap.min.css" />
 <meta charset="utf-8" />
 </head>
 <body>
