--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <div class="col-lg-6">dsa</div>
 </div>
 <div class="row">
-  <div class="col-lg-2"></div>
+  <div class="col-lg-2">dd</div>
   <div class="col-lg-12">asdasd</div>
   <div class="col-lg-2"></div>
 </div>
