--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
 <body>
 
 <div class="row">
-  <div class="col-lg-4">asd</div>
-  <div class="col-lg-6">dsa</div>
+  <div class="col-md -4">asd</div>
+  <div class="col-md -6">dsa</div>
 </div>
 <div class="row">
-  <div class="col-lg-2">dd</div>
-  <div class="col-lg-12">asdasd</div>
-  <div class="col-lg-2"></div>
+  <div class="col-md -2">dd</div>
+  <div class="col-md -12">asdasd</div>
+  <div class="col-md -2"></div>
 </div>
 <div class="row">
   ...
