--- a/index.html
+++ b/index.html
@@ -6,8 +6,12 @@
 <body>
 
 <div class="row">
-  <div class="col-md -4">asd</div>
-  <div class="col-md -6">dsa</div>
+  <div class="col-md -2"><a href="index.html">Home</a></div>
+  <div class="col-md -2"><a href="akseli.html">Akseli</a></div>
+  <div class="col-md -2"><a href="muha.html">Muha</a></div>
+  <div class="col-md -2"><a href="joku.html">Joku</a></div>
+  <div class="col-md -2"><a href="sonja.html">Sonja</a></div>
+
 </div>
 <div class="row">
   <div class="col-md -2">dd</div>
