--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <body>
 
 <div class="row">
-	<div class="col-md -2">dd</div>
+	<div class="col-md -2"></div>
   <div class="col-md-1"><a href="index.html">Home</a></div>
   <div class="col-md-1"><a href="akseli.html">Akseli</a></div>
   <div class="col-md-1"><a href="muha.html">Muha</a></div>
@@ -16,7 +16,7 @@
 </div>
 <div class="row">
   <div class="col-md -2">dd</div>
-  <div class="col-md -12">asdasd</div>
+  <div class="col-md -12">asdasd</div><!-- content panel-->
   <div class="col-md -2"></div>
 </div>
 <div class="row">
