--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
 <div class="row">
 	<div class="col-md-2"></div>
-  <div class="col-md-1" style="background-color:blue;"><a href="index.html">Home</a></div>
+  <div class="col-md-1" style="background-color:blue; text-align:midle;"><a href="index.html">Home</a></div>
   <div class="col-md-1" style="background-color:lightblue;"><a href="akseli.html">Akseli</a></div>
   <div class="col-md-1" style="background-color:lightblue;"><a href="muha.html">Muha</a></div>
   <div class="col-md-1" style="background-color:lightblue;"><a href="joku.html">Joku</a></div>
