--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <head>
 <link rel="stylesheet" href="./style/bootstrap-5.0.0-beta1-dist/css/bootstrap.min.css" />
 <meta charset="utf-8" />
+<title>project Lucky7</title>
 </head>
 <body>
 
