--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 
-<div class="row" style="height:800px;">
+<div class="row">
 	<div class="col-md-2"></div>
   <div class="col-md-1" style="background-color:blue; text-align:midle;"><a href="index.html">Home</a></div>
   <div class="col-md-1" style="background-color:lightblue;"><a href="akseli.html">Akseli</a></div>
@@ -15,7 +15,7 @@
   <div class="col-md-1" style="background-color:lightblue;"><a href="sonja.html">Sonja</a></div>
 
 </div>
-<div class="row">
+<div class="row" style="height:800px;>
   <div class="col-md-2">dd</div>
   <div class="col-md-12">asdasd</div><!-- content panel-->
   <div class="col-md-2"></div>
