--- a/index.html
+++ b/index.html
@@ -15,13 +15,13 @@
   <div class="col-md-1" style="background-color:lightblue;"><a href="sonja.html">Sonja</a></div>
 
 </div>
-<div class="row" style="height:800px;>
+<div class="row" style="height:800px;">
   <div class="col-md-2">dd</div>
   <div class="col-md-12">asdasd</div><!-- content panel-->
   <div class="col-md-2"></div>
 </div>
 <div class="row">
-  ...
+
 </div>
 
 </body>
