--- a/index.html
+++ b/index.html
@@ -16,12 +16,12 @@
 
 </div>
 <div class="row" style="height:800px;">
-  <div class="col-md-2"></div>
-  <div class="col-md-8">asdasd</div><!-- content panel-->
-  <div class="col-md-2"></div>
+  <div class="col-md-2">sidebar</div>
+  <div class="col-md-8">content</div><!-- content panel-->
+  <div class="col-md-2">sidebar</div>
 </div>
 <div class="row">
-
+<div class="col-md-12">footer</div>
 </div>
 
 </body>
