--- a/index.html
+++ b/index.html
@@ -8,20 +8,20 @@
 
 <div class="row">
 	<div class="col-md-2"></div>
-  <div class="col-md-1" style="background-color:blue; text-align:midle;"><a href="index.html">Home</a></div>
-  <div class="col-md-1" style="background-color:lightblue; text-align:midle;"><a href="akseli.html">Akseli</a></div>
-  <div class="col-md-1" style="background-color:lightblue; text-align:midle;"><a href="muha.html">Muha</a></div>
-  <div class="col-md-1" style="background-color:lightblue; text-align:midle;"><a href="joku.html">Joku</a></div>
-  <div class="col-md-1" style="background-color:lightblue; text-align:midle;"><a href="sonja.html">Sonja</a></div>
+  <div class="col-md-1" style="background-color:blue; text-align:center;"><a href="index.html">Home</a></div>
+  <div class="col-md-1" style="background-color:lightblue; text-align:center;"><a href="akseli.html">Akseli</a></div>
+  <div class="col-md-1" style="background-color:lightblue; text-align:center;"><a href="muha.html">Muha</a></div>
+  <div class="col-md-1" style="background-color:lightblue; text-align:center;"><a href="joku.html">Joku</a></div>
+  <div class="col-md-1" style="background-color:lightblue; text-align:center;"><a href="sonja.html">Sonja</a></div>
 
 </div>
 <div class="row" style="height:800px;">
-  <div class="col-md-2" style="text-align:midle;">sidebar</div>
-  <div class="col-md-8" style="text-align:midle;">content</div><!-- content panel-->
-  <div class="col-md-2" style="text-align:midle;">sidebar</div>
+  <div class="col-md-2" style="text-align:center;">sidebar</div>
+  <div class="col-md-8" style="text-align:center;">content</div><!-- content panel-->
+  <div class="col-md-2" style="text-align:center;">sidebar</div>
 </div>
 <div class="row">
-<div class="col-md-12" style="text-align:midle;">footer</div>
+<div class="col-md-12" style="text-align:center;">footer</div>
 </div>
 
 </body>
