--- a/index.html
+++ b/index.html
@@ -7,12 +7,11 @@
 <body>
 
 <div class="row">
-	<div class="col-md-2"></div>
-  <div class="col-md-1" style="background-color:blue; text-align:center;"><a href="index.html">Home</a></div>
-  <div class="col-md-1" style="background-color:lightblue; text-align:center;"><a href="akseli.html">Akseli</a></div>
-  <div class="col-md-1" style="background-color:lightblue; text-align:center;"><a href="muha.html">Muha</a></div>
-  <div class="col-md-1" style="background-color:lightblue; text-align:center;"><a href="joku.html">Joku</a></div>
-  <div class="col-md-1" style="background-color:lightblue; text-align:center;"><a href="sonja.html">Sonja</a></div>
+  <div class="col-md-4" style="background-color:blue; text-align:center;"><a href="index.html">Home</a></div>
+  <div class="col-md-2" style="background-color:lightblue; text-align:center;"><a href="akseli.html">Akseli</a></div>
+  <div class="col-md-2" style="background-color:lightblue; text-align:center;"><a href="muha.html">Muha</a></div>
+  <div class="col-md-2" style="background-color:lightblue; text-align:center;"><a href="jere.html">Jere</a></div>
+  <div class="col-md-2" style="background-color:lightblue; text-align:center;"><a href="sonja.html">Sonja</a></div>
 
 </div>
 <div class="row" style="height:800px;">
