--- a/index.html
+++ b/index.html
@@ -1,27 +1,36 @@
 <!DOCTYPE html>
+
 <head>
-<link rel="stylesheet" href="./style/bootstrap-5.0.0-beta1-dist/css/bootstrap.min.css" />
-<meta charset="utf-8" />
-<title>Lucky7</title>
+    <link rel="stylesheet" href="./style/bootstrap-5.0.0-beta1-dist/css/bootstrap.min.css" />
+    <meta charset="utf-8" />
+    <title>Lucky7</title>
 </head>
+<style>
+    body {
+        background-color: rgb(41, 41, 41);
+    }
+</style>
+
 <body>
 
-<div class="row">
-  <div class="col-md-4" style="background-color:blue; text-align:center;"><a href="index.html">Home</a></div>
-  <div class="col-md-2" style="background-color:lightblue; text-align:center;"><a href="akseli.html">Akseli</a></div>
-  <div class="col-md-2" style="background-color:lightblue; text-align:center;"><a href="muha.html">Muha</a></div>
-  <div class="col-md-2" style="background-color:lightblue; text-align:center;"><a href="jere.html">Jere</a></div>
-  <div class="col-md-2" style="background-color:lightblue; text-align:center;"><a href="sonja.html">Sonja</a></div>
+    <div class="row">
+        <div class="col-md-4" style="background-color:blue; text-align:center;"><a href="index.html">Home</a></div>
+        <div class="col-md-2" style="background-color:rgb(41, 41, 41); text-align:center;"><a href="akseli.html">Akseli</a></div>
+        <div class="col-md-2" style="background-color:rgb(41, 41, 41); text-align:center;"><a href="muha.html">Muha</a></div>
+        <div class="col-md-2" style="background-color:rgb(41, 41, 41); text-align:center;"><a href="jere.html">Jere</a></div>
+        <div class="col-md-2" style="background-color:rgb(41, 41, 41); text-align:center;"><a href="sonja.html">Sonja</a></div>
 
-</div>
-<div class="row" style="height:800px;">
-  <div class="col-md-2" style="text-align:center;">sidebar</div>
-  <div class="col-md-8" style="text-align:center;">content</div><!-- content panel-->
-  <div class="col-md-2" style="text-align:center;">sidebar</div>
-</div>
-<div class="row">
-<div class="col-md-12" style="text-align:center;">footer</div>
-</div>
+    </div>
+    <div class="row" style="height:800px;">
+        <div class="col-md-2" style="text-align:center;">sidebar</div>
+        <div class="col-md-8" style="text-align:center;">content</div>
+        <!-- content panel-->
+        <div class="col-md-2" style="text-align:center;">sidebar</div>
+    </div>
+    <div class="row">
+        <div class="col-md-12" style="text-align:center;">footer</div>
+    </div>
 
 </body>
+
 </html>
