--- a/index.html
+++ b/index.html
@@ -7,18 +7,24 @@
 </head>
 <style>
     body {
+        color: whitesmoke;
         background-color: rgb(41, 41, 41);
+    }
+    
+    a {
+        color: white;
     }
 </style>
 
 <body>
 
     <div class="row">
-        <div class="col-md-4" style="background-color:blue; text-align:center;"><a href="index.html">Home</a></div>
-        <div class="col-md-2" style="background-color:rgb(41, 41, 41); text-align:center;"><a href="akseli.html">Akseli</a></div>
-        <div class="col-md-2" style="background-color:rgb(41, 41, 41); text-align:center;"><a href="muha.html">Muha</a></div>
-        <div class="col-md-2" style="background-color:rgb(41, 41, 41); text-align:center;"><a href="jere.html">Jere</a></div>
-        <div class="col-md-2" style="background-color:rgb(41, 41, 41); text-align:center;"><a href="sonja.html">Sonja</a></div>
+
+        <div class="col-md-4" style="background-color:rgb(63, 63, 63); text-align:center;"><a class="nav-link active" aria-current="index" href="index.html">Home</a></div>
+        <div class="col-md-2" style="background-color:rgb(63, 63, 63); text-align:center;"><a class="nav-link" href="akseli.html">Akseli</a></div>
+        <div class="col-md-2" style="background-color:rgb(63, 63, 63); text-align:center;"><a class="nav-link" href="muha.html">Muha</a></div>
+        <div class="col-md-2" style="background-color:rgb(63, 63, 63); text-align:center;"><a class="nav-link" href="jere.html">Jere</a></div>
+        <div class="col-md-2" style="background-color:rgb(63, 63, 63); text-align:center;"><a class="nav-link" href="sonja.html">Sonja</a></div>
 
     </div>
     <div class="row" style="height:800px;">
