--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <link rel="stylesheet" href="./style/bootstrap-5.0.0-beta1-dist/css/bootstrap.min.css" />
     <meta charset="utf-8" />
     <title>Lucky7</title>
+    <link rel="icon" href="./images/favicon.ico" type="image/icon type">
 </head>
 <style>
     body {
