--- a/index.html
+++ b/index.html
@@ -8,12 +8,17 @@
 </head>
 <style>
     body {
+        font-family: Helvetica;
         color: whitesmoke;
         background-color: rgb(41, 41, 41);
     }
     
     a {
         color: white;
+    }
+    
+    #banner {
+        background-image: linear-gradient( rgb(63, 63, 63), rgb(41, 41, 41));
     }
 </style>
 
@@ -27,6 +32,9 @@
         <div class="col-md-2" style="background-color:rgb(63, 63, 63); text-align:center;"><a class="nav-link" href="jere.html">Jere</a></div>
         <div class="col-md-2" style="background-color:rgb(63, 63, 63); text-align:center;"><a class="nav-link" href="sonja.html">Sonja</a></div>
 
+    </div>
+    <div class="row" id="banner" style="height:50px;">
+        <div class="col-md-12"></div>
     </div>
     <div class="row" style="height:800px;">
         <div class="col-md-2" style="text-align:center;">sidebar</div>
