--- a/index.html
+++ b/index.html
@@ -52,30 +52,10 @@
     <div class="row" style="height:auto; min-height: 800px;">
         <div class="col-md-2" style="text-align:center; background-color: rgb(77, 77, 77);">sidebar</div>
         <div class="col-md-8" style="text-align:center; background-color: rgb(214, 214, 214); border-style: solid; border-color: gray; color:rgb(22, 22, 22)">
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe natus, ratione nemo alias repellat provident? Illo natus dolor rerum optio quo enim nesciunt obcaecati repellendus tempore similique, minus accusantium non? Lorem ipsum dolor sit
-                amet consectetur adipisicing elit. Adipisci atque deserunt, porro eos nesciunt minus soluta corrupti blanditiis, repudiandae quo excepturi sunt! Enim, fuga fugiat unde pariatur sunt nulla nostrum. Lorem ipsum dolor sit amet consectetur
-                adipisicing elit. Vitae, ad quae nesciunt, illo inventore architecto ducimus deleniti ut itaque ea iure nemo soluta sunt eos, dolore aspernatur perferendis? Facilis, iusto?</p>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe natus, ratione nemo alias repellat provident? Illo natus dolor rerum optio quo enim nesciunt obcaecati repellendus tempore similique, minus accusantium non? Lorem ipsum dolor sit
-                amet consectetur adipisicing elit. Adipisci atque deserunt, porro eos nesciunt minus soluta corrupti blanditiis, repudiandae quo excepturi sunt! Enim, fuga fugiat unde pariatur sunt nulla nostrum. Lorem ipsum dolor sit amet consectetur
-                adipisicing elit. Vitae, ad quae nesciunt, illo inventore architecto ducimus deleniti ut itaque ea iure nemo soluta sunt eos, dolore aspernatur perferendis? Facilis, iusto?</p>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe natus, ratione nemo alias repellat provident? Illo natus dolor rerum optio quo enim nesciunt obcaecati repellendus tempore similique, minus accusantium non? Lorem ipsum dolor sit
-                amet consectetur adipisicing elit. Adipisci atque deserunt, porro eos nesciunt minus soluta corrupti blanditiis, repudiandae quo excepturi sunt! Enim, fuga fugiat unde pariatur sunt nulla nostrum. Lorem ipsum dolor sit amet consectetur
-                adipisicing elit. Vitae, ad quae nesciunt, illo inventore architecto ducimus deleniti ut itaque ea iure nemo soluta sunt eos, dolore aspernatur perferendis? Facilis, iusto?</p>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe natus, ratione nemo alias repellat provident? Illo natus dolor rerum optio quo enim nesciunt obcaecati repellendus tempore similique, minus accusantium non? Lorem ipsum dolor sit
-                amet consectetur adipisicing elit. Adipisci atque deserunt, porro eos nesciunt minus soluta corrupti blanditiis, repudiandae quo excepturi sunt! Enim, fuga fugiat unde pariatur sunt nulla nostrum. Lorem ipsum dolor sit amet consectetur
-                adipisicing elit. Vitae, ad quae nesciunt, illo inventore architecto ducimus deleniti ut itaque ea iure nemo soluta sunt eos, dolore aspernatur perferendis? Facilis, iusto?</p>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe natus, ratione nemo alias repellat provident? Illo natus dolor rerum optio quo enim nesciunt obcaecati repellendus tempore similique, minus accusantium non? Lorem ipsum dolor sit
-                amet consectetur adipisicing elit. Adipisci atque deserunt, porro eos nesciunt minus soluta corrupti blanditiis, repudiandae quo excepturi sunt! Enim, fuga fugiat unde pariatur sunt nulla nostrum. Lorem ipsum dolor sit amet consectetur
-                adipisicing elit. Vitae, ad quae nesciunt, illo inventore architecto ducimus deleniti ut itaque ea iure nemo soluta sunt eos, dolore aspernatur perferendis? Facilis, iusto?</p>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe natus, ratione nemo alias repellat provident? Illo natus dolor rerum optio quo enim nesciunt obcaecati repellendus tempore similique, minus accusantium non? Lorem ipsum dolor sit
-                amet consectetur adipisicing elit. Adipisci atque deserunt, porro eos nesciunt minus soluta corrupti blanditiis, repudiandae quo excepturi sunt! Enim, fuga fugiat unde pariatur sunt nulla nostrum. Lorem ipsum dolor sit amet consectetur
-                adipisicing elit. Vitae, ad quae nesciunt, illo inventore architecto ducimus deleniti ut itaque ea iure nemo soluta sunt eos, dolore aspernatur perferendis? Facilis, iusto?</p>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe natus, ratione nemo alias repellat provident? Illo natus dolor rerum optio quo enim nesciunt obcaecati repellendus tempore similique, minus accusantium non? Lorem ipsum dolor sit
-                amet consectetur adipisicing elit. Adipisci atque deserunt, porro eos nesciunt minus soluta corrupti blanditiis, repudiandae quo excepturi sunt! Enim, fuga fugiat unde pariatur sunt nulla nostrum. Lorem ipsum dolor sit amet consectetur
-                adipisicing elit. Vitae, ad quae nesciunt, illo inventore architecto ducimus deleniti ut itaque ea iure nemo soluta sunt eos, dolore aspernatur perferendis? Facilis, iusto?</p>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe natus, ratione nemo alias repellat provident? Illo natus dolor rerum optio quo enim nesciunt obcaecati repellendus tempore similique, minus accusantium non? Lorem ipsum dolor sit
-                amet consectetur adipisicing elit. Adipisci atque deserunt, porro eos nesciunt minus soluta corrupti blanditiis, repudiandae quo excepturi sunt! Enim, fuga fugiat unde pariatur sunt nulla nostrum. Lorem ipsum dolor sit amet consectetur
-                adipisicing elit. Vitae, ad quae nesciunt, illo inventore architecto ducimus deleniti ut itaque ea iure nemo soluta sunt eos, dolore aspernatur perferendis? Facilis, iusto?</p>
+            <h3>This page will contain information about the project members.</h3>
+            <p>Project members are: Akseli, Jere, Muha and Sonja.</p>
+            <p>This is our project's home page and you can navigate to different pages made by the project members themselves.</p>
+            <p><i>-Dev Team</i></p>
         </div>
         <!-- content panel-->
         <div class="col-md-2" style="text-align:center; background-color: rgb(77, 77, 77);">sidebar</div>
