Added id for ul and centered the list

--- a/sonja.html
+++ b/sonja.html
@@ -24,7 +24,13 @@
         <div class="col-md-2" style="text-align:center; background-color: rgb(77, 77, 77);"></div>
         <div class="col-md-8" style="text-align:center; background-color: rgb(214, 214, 214); border-style: solid; border-color: gray; color:rgb(22, 22, 22)">
             <h3>This page will contain information about the project members.</h3>
-            <p>Project members are: Akseli, Jere, Muha and Sonja.</p>
+            <h4>Project members are: Akseli, Jere, Muha and Sonja.</h4>
+			<ul>
+			<li>Akseli Savinainen</li>
+			<li>Jere Eskelinen</li>
+			<li>Muhammed Al-Zahu</li>
+			<li>Sonja Sundell</li>
+			</ul>
             <p>This is our project's home page and you can navigate to different pages made by the project members themselves.</p>
             <p><i>-Dev Team</i></p>
         </div>
