--- a/akseli.html
+++ b/akseli.html
@@ -23,10 +23,10 @@
     <div class="row" style="height:auto; min-height: 800px;">
         <div class="col-md-2" style="text-align:center; background-color: rgb(77, 77, 77);"></div>
         <div class="col-md-8" style="text-align:center; background-color: rgb(214, 214, 214); border-style: solid; border-color: gray; color:rgb(22, 22, 22)">
-            <h3>This page will contain information about the project members.</h3>
-            <p>Project members are: Akseli, Jere, Muha and Sonja.</p>
-            <p>This is our project's home page and you can navigate to different pages made by the project members themselves.</p>
-            <p><i>-Dev Team</i></p>
+            <h3>Akseli Savinainen.</h3>
+            <br>
+             <img src="images/akseli.jpg" alt="profile pickture" style="height:200px"> <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque vel neque at magna bibendum egestas. Duis facilisis ultrices mi, tristique tincidunt erat malesuada a. Duis maximus aliquam diam, ut rutrum est sodales et. Morbi eget arcu posuere nulla convallis cursus. Pellentesque eget elementum eros, sit amet vestibulum tellus. Phasellus nec pellentesque ex, eget eleifend mauris. Sed rhoncus risus mi, in tempus ligula convallis pulvinar. Vestibulum sodales efficitur velit, id pretium nibh dignissim vitae. Donec eget eleifend nisi, cursus efficitur tortor. Maecenas vitae maximus nulla. Nulla facilisi. </p>
+            
         </div>
         <!-- content panel-->
         <div class="col-md-2" style="text-align:center; background-color: rgb(77, 77, 77);"></div>
