Added info about Sonja.

--- a/sonja.html
+++ b/sonja.html
@@ -24,16 +24,20 @@
     <div class="row" style="height:auto; min-height: 800px;">
         <div class="col-md-2" style="text-align:center; background-color: rgb(77, 77, 77);"></div>
         <div class="col-md-8" style="text-align:center; background-color: rgb(214, 214, 214); border-style: solid; border-color: gray; color:rgb(22, 22, 22)">
-            <h3>This page will contain information about the project members.</h3><br>
-            <h4>Project members</h4>
-			<ul id="members">
-				<li>Akseli Savinainen</li>
-				<li>Jere Eskelinen</li>
-				<li>Muhammed Al-Zahu</li>
-				<li>Sonja Sundell</li>
-			</ul><br>
-			<p>This is our project's home page and you can navigate to different pages made by the project members themselves.</p>
-			<p><i>-Dev Team</i></p>
+            <h3>Sonja Sundell</h3><br>
+            <img src="images/Sonja.jpg" alt="Picture of Sonja" style="height: 300px; width: 300px; float: right;">
+            <p>I'm 20 year-old woman that lives in Kangasala. I live there with my boyfriend and our cat.
+                Most of my days I spend playing video games with my boyfriend or having fun with him.
+                I have studied in TREDU for 3 years before going to HAMK. I studied the same thing I study now.</p>
+            <p>My family contains mother, father, step-mother, big sister, big brother and little brother.
+                My mother and little brother live in Lapland so I don't see them at all.
+                I see my father and step-mother from time to time, they live in Orivesi.
+                And I don't really see my big sister or brother at all. Basicly every time I see my father I see them.</p>
+            <p>My and my boyfirends cat is named Sylvia. She is a rescue cat. We got her last year and she is still very shy.
+                She has had a very serious teeth issue that runs in her family. And that's why she doesn't trust people.
+                Her mouth is not perfect, because of all the operations.
+                She is black cat with white socks and underbelly. She has yellow eyes and a black beard.
+            </p>
         </div>
         <!-- content panel-->
         <div class="col-md-2" style="text-align:center; background-color: rgb(77, 77, 77);"></div>
