--- a/zahu.html
+++ b/zahu.html
@@ -23,10 +23,12 @@
     <div class="row" style="height:auto; min-height: 800px;">
         <div class="col-md-2" style="text-align:center; background-color: rgb(77, 77, 77);"></div>
         <div class="col-md-8" style="text-align:center; background-color: rgb(214, 214, 214); border-style: solid; border-color: gray; color:rgb(22, 22, 22)">
-            <h3>This page will contain information about the project members.</h3>
-            <p>Project members are: Akseli, Jere, Muha and Sonja.</p>
-            <p>This is our project's home page and you can navigate to different pages made by the project members themselves.</p>
-            <p><i>-Dev Team</i></p>
+            <h3>Muhammed Al-Zahu</h3>
+            <p>My name is Muhammed Al-Zahu and I'm 22-years old currently living in Hämeenlinna. I was born in Tampere and currently planning to return there after finishing my studies in HAMK, Hämeen ammattikorkeakoulu</p>
+			<p>I live in a terraced house with my dog, Luna and her breed is American Bully, gender is female and she is 5 months old. I sometimes go to Tampere to work with electric scooters.</p>
+			<p>My parents are from Iraq, Samawa, but have been living here in Finland for over 24 years.</p>
+            <p><i>-Zahu</i></p>
+			<img src="./images/omakuva.jpg" alt="Muha" style="height:300px; width:200px;">
         </div>
         <!-- content panel-->
         <div class="col-md-2" style="text-align:center; background-color: rgb(77, 77, 77);"></div>
