--- a/jere.html
+++ b/jere.html
@@ -11,7 +11,33 @@
 
 <style>
     #kontentti {
+        font-size: 24px;
         text-align: left;
+        width: 100%;
+        display: inline-block;
+        background-color: blue;
+    }
+    
+    #olenjumala {
+        font-size: 24px;
+        text-align: left;
+        display: inline-block;
+        width: 100%;
+        padding-left: 30px;
+        padding-top: 30px;
+        padding-right: 30px;
+        background-color: burlywood;
+    }
+    
+    #kisset {
+        padding-top: 30px;
+        padding-left: 30px;
+        padding-bottom: 30px;
+        font-size: 24px;
+        text-align: left;
+        width: 100%;
+        display: inline-block;
+        background-color: blue;
     }
 </style>
 
@@ -32,13 +58,49 @@
         <div class="col-md-2" style="text-align:center; background-color: rgb(77, 77, 77);"></div>
         <div class="col-md-8" style="text-align:center; background-color: rgb(214, 214, 214); border-style: solid; border-color: gray; color:rgb(22, 22, 22)">
 
-            <img src="./images/jere1.jpg" class="rounded" alt="..." style="height: 30%; float: left; margin: 30px;">
+
+
             <div id="kontentti">
+                <img src="./images/jere1.jpg" class="rounded" alt="..." style="float: left; margin: 30px; width: 400px;">
                 <br>
-                <h3>Jere Eskelinen</h3>
+                <h2>Jere Eskelinen</h2>
                 <br>
-                <p>Elämäntapa nörtti, Sarkasmin jumalainen ruhtinas jolla todella fragile ego. Tämä sivu kertoo vähän omista harrastuksistani sekä minusta henkilönä.</p>
+                <p>Elämäntapa nörtti, sarkasmin jumalainen ruhtinas jolla todella fragile ego. Tämä sivu kertoo vähän omista harrastuksistani sekä minusta henkilönä.</p>
             </div>
+
+
+            <div id="olenjumala">
+                <img src="./images/WoW.jpg" class="rounded" alt="..." style="float: right; width: 400px;">
+                <h2>Harrastukset:</h2>
+
+                <ul>
+                    <li>Videopelit</li>
+                    <li>Laskettelu</li>
+                    <li>Uinti</li>
+                </ul>
+                <br>
+                <img src="./images/Laskettelu.jpg" class="rounded" alt="..." style="float: right; width: 400px;">
+                <p>Lempipeleihin kuuluu: World of Warcraft, League of Legends, Osu!, Oldschool RuneScape ja Diablo 2.</p>
+                <br>
+
+                <p>Lasketella tykkään suksilla. Osaan myös laskea lumilaudalla sekä bladeilla.</p>
+                <br>
+                <p>Uintia olen harrastanut nyt vuoden verran ja suurimman osan ajasta tekniikkana käytän rintauintia.</p>
+                <br>
+
+            </div>
+
+            <div id="kisset">
+                <img src="./images/Laku.jpg" class="rounded" alt="..." style="float: left; padding-right: 30px; width: 400px;">
+                <img src="./images/Tuhkis.jpg" class="rounded" alt="..." style="float: right; padding-left: 30px; padding-right: 30px; width: 400px;">
+                <h2>Lemmikit:</h2>
+                <p>Minulla on kaksi kissaa nimeltä Laku ja Tuhkis.</p>
+                <p>Laku on musta kissa joka löytyi noin kaksi viikkoisena Kuopiolaisen maatilan reunamilta muovipussista. Laku on siis kasvanut ilman emoa. Nyt viisi vuotta vanha Laku voi hyvin! :)</p>
+
+
+
+            </div>
+
 
         </div>
         <!-- content panel-->
