--- a/jere.html
+++ b/jere.html
@@ -70,7 +70,7 @@
 
 
             <div id="olenjumala">
-                <img src="./images/WoW.jpg" class="rounded" alt="..." style="float: right; width: 400px;">
+                <img src="./images/WoW.jpg" class="rounded" alt="..." style="float: right; padding-left: 30px; width: 400px;">
                 <h2>Harrastukset:</h2>
 
                 <ul>
@@ -79,7 +79,7 @@
                     <li>Uinti</li>
                 </ul>
                 <br>
-                <img src="./images/Laskettelu.jpg" class="rounded" alt="..." style="float: right; width: 400px;">
+                <img src="./images/Laskettelu.jpg" class="rounded" alt="..." style="float: right; padding-left: 30px; width: 400px;">
                 <p>Lempipeleihin kuuluu: World of Warcraft, League of Legends, Osu!, Oldschool RuneScape ja Diablo 2.</p>
                 <br>
 
