--- a/jere.html
+++ b/jere.html
@@ -11,6 +11,9 @@
 
 <style>
     #kontentti {
+        padding-top: 30px;
+        padding-left: 30px;
+        padding-bottom: 30px;
         font-size: 24px;
         text-align: left;
         width: 100%;
@@ -60,8 +63,8 @@
 
 
 
-            <div id="kontentti">
-                <img src="./images/jere1.jpg" class="rounded" alt="..." style="float: left; margin: 30px; width: 400px;">
+            <div class="col-md-2" id="kontentti">
+                <img src="./images/jere1.jpg" class="rounded" alt="..." style="float: left; padding-right: 30px; width: 400px;">
                 <br>
                 <h2>Jere Eskelinen</h2>
                 <br>
@@ -69,7 +72,7 @@
             </div>
 
 
-            <div id="olenjumala">
+            <div class="col-md-2" id="olenjumala">
                 <img src="./images/WoW.jpg" class="rounded" alt="..." style="float: right; padding-left: 30px; width: 400px;">
                 <h2>Harrastukset:</h2>
 
@@ -92,7 +95,7 @@
 
             <div id="kisset">
                 <img src="./images/Laku.jpg" class="rounded" alt="..." style="float: left; padding-right: 30px; width: 400px;">
-                <img src="./images/Tuhkis.jpg" class="rounded" alt="..." style="float: right; padding-left: 30px; padding-right: 30px; width: 400px;">
+                <img src="./images/Tuhkis.jpg" class="rounded" alt="..." style="float: right; padding-right: 30px; width: 400px;">
                 <h2>Lemmikit:</h2>
                 <p>Minulla on kaksi kissaa nimeltä Laku ja Tuhkis.</p>
                 <p>Laku on musta kissa joka löytyi noin kaksi viikkoisena Kuopiolaisen maatilan reunamilta muovipussista. Laku on siis kasvanut ilman emoa. Nyt viisi vuotta vanha Laku voi hyvin! :)</p>
