--- a/akseli.html
+++ b/akseli.html
@@ -25,7 +25,7 @@
         <div class="col-md-8" style="text-align:center; background-color: rgb(214, 214, 214); border-style: solid; border-color: gray; color:rgb(22, 22, 22)">
             <h3>Akseli Savinainen.</h3>
             <br>
-             <img src="images/akseli.jpg" alt="profile pickture" style="height:200px"> <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque vel neque at magna bibendum egestas. Duis facilisis ultrices mi, tristique tincidunt erat malesuada a. Duis maximus aliquam diam, ut rutrum est sodales et. Morbi eget arcu posuere nulla convallis cursus. Pellentesque eget elementum eros, sit amet vestibulum tellus. Phasellus nec pellentesque ex, eget eleifend mauris. Sed rhoncus risus mi, in tempus ligula convallis pulvinar. Vestibulum sodales efficitur velit, id pretium nibh dignissim vitae. Donec eget eleifend nisi, cursus efficitur tortor. Maecenas vitae maximus nulla. Nulla facilisi. </p>
+             <img src="images/akseli.jpg" alt="profile pickture" style="height:200px"> <p>Hei olen puhelijas ja tutkiva ammatikorkeaopiskelija. Harrastuksiani ovat videopelit ja paskanjauhanta</p>
             
         </div>
         <!-- content panel-->
