Actual bootstrap code

--- a/jere.html
+++ b/jere.html
@@ -61,48 +61,100 @@
         <div class="col-md-2" style="text-align:center; background-color: rgb(77, 77, 77);"></div>
         <div class="col-md-8" style="text-align:center; background-color: rgb(214, 214, 214); border-style: solid; border-color: gray; color:rgb(22, 22, 22)">
 
-
-
-            <div class="col-md-2" id="kontentti">
-                <img src="./images/jere1.jpg" class="rounded" alt="..." style="float: left; padding-right: 30px; width: 400px;">
+            <div class="container-fluid padding">
                 <br>
-                <h2>Jere Eskelinen</h2>
-                <br>
-                <p>Elämäntapa nörtti, sarkasmin jumalainen ruhtinas jolla todella fragile ego. Tämä sivu kertoo vähän omista harrastuksistani sekä minusta henkilönä.</p>
+                <div class="row padding">
+                    <div class="col-lg-4">
+                        <img src="./images/jere1.jpg" class="img-fluid">
+                    </div>
+                    <div class="col-lg-8">
+                        <h2>Jere Eskelinen</h2>
+                        <p>Elämäntapa nörtti, sarkasmin jumalainen ruhtinas jolla todella fragile ego. Tämä sivu kertoo vähän omista harrastuksistani sekä minusta henkilönä.</p>
+                    </div>
+                </div>
+            </div>
+            <br>
+
+            <div class="row text-center padding">
+                <hr class="my-4">
             </div>
 
-
-            <div class="col-md-2" id="olenjumala">
-                <img src="./images/WoW.jpg" class="rounded" alt="..." style="float: right; padding-left: 30px; width: 400px;">
-                <h2>Harrastukset:</h2>
-
-                <ul>
-                    <li>Videopelit</li>
-                    <li>Laskettelu</li>
-                    <li>Uinti</li>
-                </ul>
+            <div class="container-fluid padding">
                 <br>
-                <img src="./images/Laskettelu.jpg" class="rounded" alt="..." style="float: right; padding-left: 30px; width: 400px;">
-                <p>Lempipeleihin kuuluu: World of Warcraft, League of Legends, Osu!, Oldschool RuneScape ja Diablo 2.</p>
+                <div class="row padding">
+                    <div class="col-lg-8">
+                        <h2>Harrastukset</h2>
+                        <ul>
+                            <li>Videopelit</li>
+                            <li>Laskettelu</li>
+                            <li>Uinti</li>
+                        </ul>
+                        <p>Lempipeleihin kuuluu: World of Warcraft, League of Legends, Osu!, Oldschool RuneScape ja Diablo 2.</p>
+                        <a href="https://raider.io/characters/eu/outland/Dinkpildo" class="btn btn-default">
+                            <img src="./images/raiderio.png" style="height: 50px" /> Linkki Raideri.io:on
+                        </a>
+                        <a href="https://osu.ppy.sh/users/2740321" class="btn btn-default">
+                            <img src="./images/osu.png" style="height: 50px" /> Linkki Osu! profiiliin.
+                        </a>
+                    </div>
+                    <div class="col-lg-4">
+                        <img src="./images/WoW.jpg" class="img-fluid">
+                    </div>
+                </div>
+            </div>
+            <div class="container-fluid padding">
                 <br>
-
-                <p>Lasketella tykkään suksilla. Osaan myös laskea lumilaudalla sekä bladeilla.</p>
+                <div class="row padding">
+                    <div class="col-lg-5">
+                        <img src="./images/Laskettelu.jpg" class="img-fluid">
+                    </div>
+                    <div class="col-lg-7">
+                        <br>
+                        <br>
+                        <p>Lasketella tykkään suksilla. Osaan myös laskea lumilaudalla sekä bladeilla.</p>
+                        <p>Omat välineet ostin vuosi sitten, jonka jälkeen olen käynyt rinteillä semiaktiivisesti.</p>
+                        <p>Hämeenlinnasta pohjoiseen n. 50km sijaitsee Sappee hiihtokeskus jonne minulla on kausikortti kaudelle 2020-2021.</p>
+                        <a href="https://www.suksistudio.fi/laskettelu/volkl-revolt-95-twintip-laskettelusukset-leveampi-ja-suosittu-twintip-suksi/p/119438/" class="btn btn-secondary btn-lg active" role="button" aria-pressed="true">Lasken nykyään Revolt 95 twintipeillä</a>
+                        <br>
+                    </div>
+                </div>
+            </div>
+            <div class="container-fluid padding">
                 <br>
-                <p>Uintia olen harrastanut nyt vuoden verran ja suurimman osan ajasta tekniikkana käytän rintauintia.</p>
-                <br>
-
+                <div class="row padding">
+                    <div class="col-lg-7">
+                        <br>
+                        <br>
+                        <p>Uinnin harrastamisen aloitin syksyllä 2019 ja olen tähän mennessä uinut yhteensä yli 500km.</p>
+                        <br>
+                    </div>
+                    <div class="col-lg-5">
+                        <img src="./images/swimmingpool.jpg" class="img-fluid">
+                    </div>
+                </div>
+            </div>
+            <br>
+            <div class="row text-center padding">
+                <hr class="my-4">
             </div>
 
-            <div id="kisset">
-                <img src="./images/Laku.jpg" class="rounded" alt="..." style="float: left; padding-right: 30px; width: 400px;">
-                <img src="./images/Tuhkis.jpg" class="rounded" alt="..." style="float: right; padding-right: 30px; width: 400px;">
-                <h2>Lemmikit:</h2>
-                <p>Minulla on kaksi kissaa nimeltä Laku ja Tuhkis.</p>
-                <p>Laku on musta kissa joka löytyi noin kaksi viikkoisena Kuopiolaisen maatilan reunamilta muovipussista. Laku on siis kasvanut ilman emoa. Nyt viisi vuotta vanha Laku voi hyvin! :)</p>
-
-
-
+            <div class="container-fluid padding">
+                <br>
+                <div class="row padding">
+                    <div class="col-lg-4">
+                        <img src="./images/Laku.jpg" class="img-fluid">
+                    </div>
+                    <div class="col-lg-4">
+                        <h2>Lemmikit!</h2>
+                        <p>Minulla on kaksi kissaa nimeltä Laku ja Tuhkis. Laku on musta kissa joka löytyi noin kaksi viikkoisena Kuopiolaisen maatilan reunamilta muovipussista. Laku on siis kasvanut ilman emoa. Nyt viisi vuotta vanha Laku voi hyvin! :)</p>
+                        <P>Samanikäinen Tuhkis hankittiin Lakun kaveriksi ettei Lakulla olisi pitkien työpäivien aikana liian yksinäistä kotona. Tuhkis ja Laku tulevat hyvin toimeen keskenään. Tuhkis on tavallinen maatiaiskissa Joensuusta.</P>
+                    </div>
+                    <div class="col-lg-4">
+                        <img src="./images/Tuhkis.jpg" class="img-fluid">
+                    </div>
+                </div>
             </div>
+            <br>
 
 
         </div>
