--- a/jere.html
+++ b/jere.html
@@ -10,37 +10,9 @@
 </head>
 
 <style>
-    #kontentti {
-        padding-top: 30px;
-        padding-left: 30px;
-        padding-bottom: 30px;
-        font-size: 24px;
-        text-align: left;
-        width: 100%;
-        display: inline-block;
-        background-color: blue;
-    }
-    
-    #olenjumala {
-        font-size: 24px;
-        text-align: left;
-        display: inline-block;
-        width: 100%;
-        padding-left: 30px;
-        padding-top: 30px;
-        padding-right: 30px;
-        background-color: burlywood;
-    }
-    
-    #kisset {
-        padding-top: 30px;
-        padding-left: 30px;
-        padding-bottom: 30px;
-        font-size: 24px;
-        text-align: left;
-        width: 100%;
-        display: inline-block;
-        background-color: blue;
+    #lista {
+        display: table;
+        margin: 0 auto;
     }
 </style>
 
@@ -84,11 +56,13 @@
                 <div class="row padding">
                     <div class="col-lg-8">
                         <h2>Harrastukset</h2>
-                        <ul>
-                            <li>Videopelit</li>
-                            <li>Laskettelu</li>
-                            <li>Uinti</li>
-                        </ul>
+                        <div id="lista">
+                            <ul>
+                                <li>Videopelit</li>
+                                <li>Laskettelu</li>
+                                <li>Uinti</li>
+                            </ul>
+                        </div>
                         <p>Lempipeleihin kuuluu: World of Warcraft, League of Legends, Osu!, Oldschool RuneScape ja Diablo 2.</p>
                         <a href="https://raider.io/characters/eu/outland/Dinkpildo" class="btn btn-default">
                             <img src="./images/raiderio.png" style="height: 50px" /> Linkki Raideri.io:on
