--- a/jere.html
+++ b/jere.html
@@ -41,7 +41,7 @@
                     </div>
                     <div class="col-lg-8">
                         <h2>Jere Eskelinen</h2>
-                        <p>Elämäntapa nörtti, sarkasmin jumalainen ruhtinas jolla todella fragile ego. Tämä sivu kertoo vähän omista harrastuksistani sekä minusta henkilönä.</p>
+                        <p>Elämäntapanörtti ja sarkasmin jumalainen ruhtinas jolla todella fragile ego. Tämä sivu kertoo vähän omista harrastuksistani sekä lemmikeistäni.</p>
                     </div>
                 </div>
             </div>
