--- a/jere.html
+++ b/jere.html
@@ -38,7 +38,7 @@
                 <br>
                 <div class="row padding">
                     <div class="col-lg-4">
-                        <img src="./images/jere1.jpg" class="img-fluid">
+                        <img src="./images/jere1.jpg" class="img-fluid" alt="Jere">
                     </div>
                     <div class="col-lg-8">
                         <h2>Jere Eskelinen</h2>
@@ -66,14 +66,14 @@
                         </div>
                         <p>Lempipeleihin kuuluu: World of Warcraft, League of Legends, Osu!, Oldschool RuneScape ja Diablo 2.</p>
                         <a href="https://raider.io/characters/eu/outland/Dinkpildo" class="btn btn-default">
-                            <img src="./images/raiderio.png" style="height: 50px" /> Linkki Raideri.io:on
+                            <img src="./images/raiderio.png" style="height: 50px" alt="raiderio" /> Linkki Raideri.io:on
                         </a>
                         <a href="https://osu.ppy.sh/users/2740321" class="btn btn-default">
-                            <img src="./images/osu.png" style="height: 50px" /> Linkki Osu! profiiliin.
+                            <img src="./images/osu.png" style="height: 50px" alt="osu" /> Linkki Osu! profiiliin.
                         </a>
                     </div>
                     <div class="col-lg-4">
-                        <img src="./images/WoW.jpg" class="img-fluid">
+                        <img src="./images/WoW.jpg" class="img-fluid" alt="wowi">
                     </div>
                 </div>
             </div>
@@ -81,7 +81,7 @@
                 <br>
                 <div class="row padding">
                     <div class="col-lg-5">
-                        <img src="./images/Laskettelu.jpg" class="img-fluid">
+                        <img src="./images/Laskettelu.jpg" class="img-fluid" alt="Laskettelu">
                     </div>
                     <div class="col-lg-7">
                         <br>
@@ -105,7 +105,7 @@
                         <br>
                     </div>
                     <div class="col-lg-5">
-                        <img src="./images/swimmingpool.jpg" class="img-fluid">
+                        <img src="./images/swimmingpool.jpg" class="img-fluid" alt="uida">
                     </div>
                 </div>
             </div>
@@ -118,7 +118,7 @@
                 <br>
                 <div class="row padding">
                     <div class="col-lg-4">
-                        <img src="./images/Laku.jpg" class="img-fluid">
+                        <img src="./images/Laku.jpg" class="img-fluid" alt="Laku">
                     </div>
                     <div class="col-lg-4">
                         <h2>Lemmikit!</h2>
@@ -126,7 +126,7 @@
                         <P>Samanikäinen Tuhkis hankittiin Lakun kaveriksi ettei Lakulla olisi pitkien työpäivien aikana liian yksinäistä kotona. Tuhkis ja Laku tulevat hyvin toimeen keskenään. Tuhkis on tavallinen maatiaiskissa Joensuusta.</P>
                     </div>
                     <div class="col-lg-4">
-                        <img src="./images/Tuhkis.jpg" class="img-fluid">
+                        <img src="./images/Tuhkis.jpg" class="img-fluid" alt="Tuhkis">
                     </div>
                 </div>
             </div>
