Added information table

--- a/zahu.html
+++ b/zahu.html
@@ -6,6 +6,29 @@
     <meta charset="utf-8" />
     <title>Lucky7</title>
     <link rel="icon" href="./images/favicon.png" >
+	<style>
+		#signature{
+			padding-top:500px;
+		}
+		
+		#info {
+			text-align:left;
+			margin-left: auto;
+			margin-right: auto;
+			border-collapse: collapse;
+			min-width: 400px;
+			box-shadow: 0 0 5px rgb(0, 0, 0);
+		}
+		
+		thead{  
+			background-color: rgb(41, 41, 41);
+			color: #FFFFFF;
+		}
+		
+		tbody, tr{
+			border-bottom: 2px solid rgb(41, 41, 41);	
+		}
+	</style>
 </head>
 <body>
 
@@ -28,7 +51,24 @@
             <p>My name is Muhammed Al-Zahu and I'm 22-years old currently living in Hämeenlinna. I was born in Tampere and currently planning to return there after finishing my studies in HAMK, Hämeen ammattikorkeakoulu. I'm studying Bachelor of Business Administration, Information Technology.</p>
 			<p>I live in a terraced house with my dog, Luna and her breed is American Bully, gender is female and she is 5 months old. I sometimes go to Tampere to work with electric scooters.</p>
 			<p>My parents are from Iraq, Samawa, but have been living here in Finland for over 24 years.</p><br>
+			<table id="info">
+			<thead>
+				<tr>
+					<th>Information</th>
+				</tr>
+			</thead>
+			<tbody>
+				<tr>
+					<td>Muhammed Al-Zahu</td>
+				</tr>
+				<tr>
+					<td>muhammed.al-zahu@student.hamk.fi</td>
+				</tr>
+			</tbody>
+			</table>
+			<div id="signature">
             <p><i>-Zahu</i></p>
+			</div>
         </div>
         <!-- content panel-->
         <div class="col-md-2" style="text-align:center; background-color: rgb(77, 77, 77);"></div>
