--- a/zahu.html
+++ b/zahu.html
@@ -8,11 +8,12 @@
     <link rel="icon" href="./images/favicon.png" >
 	<style>
 		#signature{
-			padding-top:500px;
+			padding-top:200px;
 		}
 		
 		#info {
 			text-align:left;
+			margin-top:300px;
 			margin-left: auto;
 			margin-right: auto;
 			border-collapse: collapse;
