--- a/tehtavaAjax/homepage.html
+++ b/tehtavaAjax/homepage.html
@@ -23,7 +23,7 @@
                     <br>
                     <div class="row">
                         <div class=" col-xs-12 text-center">
-                            <button type='submit' class="btn btn-primary" id="nappi1" name='ok' value='OK' onclick="kirjautuminen(this.form);">Kirjaudu</button>
+                            <button class="btn btn-primary" id="nappi1" name='ok' value='OK' onclick="kirjautuminen(this.form);">Kirjaudu</button>
                             <a href="./rekisteroidy.html" class="btn btn-primary" id="nappi2" name='rekisteroidy' value='rek'>Rekisteröidy</a>
                             <br>
                             <br>
