--- a/tehtavaAjax/homepage.html
+++ b/tehtavaAjax/homepage.html
@@ -4,6 +4,7 @@
 <head>
     <link rel="stylesheet" href="./style/bootstrap-5.0.0-beta1-dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="./style/style.css" />
+	<script src="ajax.js"></script>
     <meta charset="utf-8" />
     <title>ScamBook</title>
     <link rel="icon" href="./images/favicon.png">
@@ -16,7 +17,7 @@
                 <br>
                 <h1 style="text-align: center; font-size: 45pt;">Kirjaudu</h1>
                 <br>
-                <form action='kirjaudu.php' method='post'>
+                <form>
                     <div class="form-group " id="kirjautuminen">
                         Tunnus: <input type='text' name='tunnus' value=''><br><br> Salasana: <input type='password' name='salasana' value=''>
                     </div>
